fix spacing on headers matching up, slightly snappier transition easing

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -6,7 +6,7 @@
   z-index: 2;
   width: 100%;
   position: fixed;
-  padding: 22px 25px;
+  padding: 21px 25px;
   background: $white;
   transition: padding .2s ease-out, top .3s ease-out, background .2s ease-out;
   &.nav-down {
