--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -11,7 +11,7 @@
   overflow: auto;
   background: $black;
   padding-bottom: ($padding * 2);
-  transition: right .2s ease-out, background .5s ease-out;
+  transition: right .4s cubic-bezier(0.77, 0, 0.175, 1), background 1s cubic-bezier(0.165, 0.84, 0.44, 1);
   -webkit-overflow-scrolling: touch;
   &.open {
     right: 0;
@@ -56,7 +56,7 @@
     width: 100%;
     height: 66px;
     background: $black;
-    padding: 22px 25px;
+    padding: 21px 25px;
     h2 {
       color: $white;
       font: 24px/1 $font-display;
