--- a/app/assets/stylesheets/components/_work-grid.scss
+++ b/app/assets/stylesheets/components/_work-grid.scss
@@ -57,13 +57,13 @@
       display: flex;
       position: absolute;
       background: rgba($black, .9);
-      transition: opacity .3s ease-out;
+      transition: opacity 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
       font: 44px/1.145833333em $font-display;
       span {
         margin: auto;
         display: inline-block;
         transform: translateY(25%);
-        transition: transform .2s ease-out;
+        transition: transform 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
       }
     }
 
