--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,7 +19,7 @@
     }
 
     #page {
-      transition: margin .2s ease-out;
+      transition: margin .4s cubic-bezier(0.77, 0, 0.175, 1);
       &.sidebar-open {
         margin-right: 300px;
       }
